Make sure the width of the label does not become too large.

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,4 +27,6 @@ body {
   font-weight: 400;
   font-size: 13px;
   padding: 4px;
+  max-width: 100px;
+  text-align: center;
 }
